terraform-aws-api-gateway-enable-cors-0.1.0 (2018-06-12)

  * Initial release